...
                                </constraints>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                <textInputTraits key="textInputTraits"/>
                            </textField>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="xbh-KF-y9z">
                                <rect key="frame" x="238" y="74" width="62" height="30"/>
                                <state key="normal" title="请求广告"/>
                                <connections>
                                    <action selector="buttonClick:" destination="vXZ-lx-hvc" eventType="touchUpInside" id="Zno-lr-cd2"/>
                                </connections>
                            </button>
                        </subviews>
                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
...
                            <constraint firstItem="Wgj-xM-cZN" firstAttribute="leading" secondItem="kh9-bI-dsS" secondAttribute="leadingMargin" id="aBS-sk-f2v"/>
                            <constraint firstItem="xbh-KF-y9z" firstAttribute="trailing" secondItem="bsa-cG-fqX" secondAttribute="trailing" id="fpH-53-9cE"/>
                            <constraint firstItem="Wgj-xM-cZN" firstAttribute="top" secondItem="xbh-KF-y9z" secondAttribute="top" id="j2H-te-yMI"/>
                            <constraint firstItem="xbh-KF-y9z" firstAttribute="leading" secondItem="Wgj-xM-cZN" secondAttribute="trailing" constant="8" id="wHk-ON-4DE"/>
                        </constraints>
                    </view>
                    <navigationItem key="navigationItem" title="横幅广告" id="Y08-9S-rq1"/>
                    <connections>
                        <outlet property="label" destination="bsa-cG-fqX" id="3Mz-0f-bjp"/>
                        <outlet property="tf_adUnitId" destination="Wgj-xM-cZN" id="fF8-Vx-6WK"/>
                    </connections>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="x5A-6p-PRh" sceneMemberID="firstResponder"/>
...
                            <constraint firstItem="Ffe-tY-uMi" firstAttribute="trailing" secondItem="JZ7-ni-Bwa" secondAttribute="trailing" id="eVp-I6-vmf"/>
                            <constraint firstItem="Hqi-Vy-ZCp" firstAttribute="top" secondItem="CNh-zn-crt" secondAttribute="bottom" constant="30" id="lZd-oW-Bh9"/>
                            <constraint firstItem="Hqi-Vy-ZCp" firstAttribute="top" secondItem="Ffe-tY-uMi" secondAttribute="top" id="pWr-MD-zI6"/>
                            <constraint firstItem="Hqi-Vy-ZCp" firstAttribute="leading" secondItem="pzy-Dc-tjx" secondAttribute="leadingMargin" id="rtN-dr-2wN"/>
                        </constraints>
                    </view>
                    <navigationItem key="navigationItem" title="插屏广告" id="5Gl-9a-XLP"/>
                    <connections>
                        <outlet property="label" destination="JZ7-ni-Bwa" id="JpY-eq-HCw"/>
                        <outlet property="tf_adUnitId" destination="Hqi-Vy-ZCp" id="zjU-Ha-NsI"/>
                    </connections>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="CPl-4Q-8hk" userLabel="First Responder" sceneMemberID="firstResponder"/>
...
                            <constraint firstItem="DM7-5R-STS" firstAttribute="top" secondItem="Hko-Pe-KI5" secondAttribute="bottom" constant="30" id="Tb1-nM-uv7"/>
                            <constraint firstItem="DM7-5R-STS" firstAttribute="leading" secondItem="keg-RW-17H" secondAttribute="leadingMargin" id="Z0a-ON-C1Z"/>
                            <constraint firstItem="DM7-5R-STS" firstAttribute="centerY" secondItem="f1g-h8-jZZ" secondAttribute="centerY" id="h0L-k5-iGh"/>
                            <constraint firstItem="DM7-5R-STS" firstAttribute="leading" secondItem="fMt-1Z-HX0" secondAttribute="leading" id="jvK-lZ-7Qb"/>
                        </constraints>
                    </view>
                    <navigationItem key="navigationItem" title="全屏图片广告" id="kJx-md-U2u"/>
                    <connections>
                        <outlet property="errorLabel" destination="fMt-1Z-HX0" id="Dp8-hY-vHN"/>
                        <outlet property="tf_adUnitId" destination="DM7-5R-STS" id="n7N-Is-CEs"/>
                    </connections>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="dMy-jv-e2P" userLabel="First Responder" sceneMemberID="firstResponder"/>
...
