//
//  IFLYAdSampleUITests.m
//  IFLYAdSampleUITests
//
//  Created by JzProl.m.Qiezi on 2020/7/14.
//  Copyright © 2020 faf. All rights reserved.
//

#import <XCTest/XCTest.h>

@interface IFLYAdSampleUITests : XCTestCase

@end

@implementation IFLYAdSampleUITests

- (void)setUp {
    // Put setup code here. This method is called before the invocation of each test method in the class.

    // In UI tests it is usually best to stop immediately when a failure occurs.
    self.continueAfterFailure = NO;

    // In UI tests it’s important to set the initial state - such as interface orientation - required for your tests before they run. The setUp method is a good place to do this.
}

- (void)tearDown {
    // Put teardown code here. This method is called after the invocation of each test method in the class.
}

- (void)testExample {
    // UI tests must launch the application that they test.
    XCUIApplication *app = [[XCUIApplication alloc] init];
    [app launch];

    XCUIElement *element = [[[[app childrenMatchingType:XCUIElementTypeWindow] elementBoundByIndex:0] childrenMatchingType:XCUIElementTypeOther].element childrenMatchingType:XCUIElementTypeOther].element;
    
    [XCUIDevice sharedDevice].orientation = UIDeviceOrientationPortrait;

    [app.buttons[@"横幅广告"] tap];
    [app.staticTexts[@"请求广告"] tap];
    [app pressForDuration:2.0f];
    [app.navigationBars[@"横幅广告"].buttons[@"Back"] tap];
    
    [app.buttons[@"插屏广告"] tap];
    [app.staticTexts[@"请求广告"] tap];
    [app pressForDuration:2.0f];
    [[element childrenMatchingType:XCUIElementTypeButton].element tap];
    [app.navigationBars[@"插屏广告"].buttons[@"Back"] tap];
    
    [app.buttons[@"全屏图片广告"] tap];
    [app.staticTexts[@"请求广告"] tap];
    [app pressForDuration:6.0f];
    [app.navigationBars[@"全屏图片广告"].buttons[@"Back"] tap];
    
    // Use recording to get started writing UI tests.
    // Use XCTAssert and related functions to verify your tests produce the correct results.
}

- (void)testLaunchPerformance {
    if (@available(macOS 10.15, iOS 13.0, tvOS 13.0, *)) {
        // This measures how long it takes to launch your application.
        [self measureWithMetrics:@[XCTOSSignpostMetric.applicationLaunchMetric] block:^{
            [[[XCUIApplication alloc] init] launch];
        }];
    }
}

@end
